# RenderEngine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Setup.h  main.cpp  makefile
Shaders/: PixelJulia.glsl  PixelMandelbrot.glsl  PixelShader.glsl  VertexShader.glsl  Vertex_SimplePosAndColor.glsl
include/: Camera.h  EventHandler.cpp  EventHandler.h  GUIManager.h  Model.cpp  Model.h  Render.cpp  Render.h  Scene.cpp  Scene.h  Settings.h  Setup.h  Shader.h  Utils.h
include/engine/: Camera.h  Controller.h  EventHandler.h  GUIManager.h  Model.h  Render.h  Scene.h  Shader.h
libs/glad/: readme.MD
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: EventHandler.cpp  Model.cpp  Render.cpp  Scene.cpp  Setup.cpp  main.cpp
src/engine/: EventHandler.cpp  GUIManager.cpp  Model.cpp  Render.cpp
